--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,48 +5,21 @@ galaxy_info:
 
   license: MIT
 
-  min_ansible_version: 1.2
+  min_ansible_version: 1.9
 
   platforms:
-  - name: EL
-    versions:
-    - all
   - name: GenericUNIX
     versions:
     - any
-  - name: OpenBSD
-    versions:
-    - all
-  - name: Fedora
-    versions:
-    - all
-  - name: opensuse
-    versions:
-    - all
-  - name: Solaris
-    versions:
-    - all
   - name: GenericBSD
     versions:
-    - all
-    versions:
-    - all
-  - name: Ubuntu
-    versions:
-    - all
-  - name: SLES
-    versions:
-    - all
+    - any
   - name: GenericLinux
     versions:
     - any
-  - name: Debian
-    versions:
-    - all
 
   galaxy_tags:
     - Magento
     - Magento2
-    - e-Commerce
 
 dependencies: []
